--- a/index.html
+++ b/index.html
@@ -4,30 +4,30 @@
 <head>
 
 	<!-- TRANSLATE: 'title' -->
-	<title>Fireflies</title>
+	<title>Biology | Aryabhatiya</title>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 	<meta content="utf-8" http-equiv="encoding">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=640">
-	<link rel="icon" type="image/png" href="favicon.png">
+	<link rel="icon" type="image/png" href="https://mathematics.aryabhatiya.ml/arya-ico.png">
 
 	<!-- TRANSLATE: 'name' and 'description' -->
-	<meta itemprop="name" content="Fireflies">
+	<meta itemprop="name" content="Bees">
 	<meta itemprop="description" content="a small simulation of small fireflies">
-	<meta itemprop="image" content="http://ncase.me/fireflies/social/thumbnail.png">
+	<meta itemprop="image" content="social/thumbnail.png">
 
 	<!-- TRANSLATE: 'twitter:title' and 'twitter:description' -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:site" content="@ncasenmare">
-	<meta name="twitter:title" content="Fireflies">
+	<meta name="twitter:site" content="@_Aryabhatiya">
+	<meta name="twitter:title" content="Bees">
 	<meta name="twitter:description" content="a small simulation of small fireflies">
-	<meta name="twitter:creator" content="@ncasenmare">
-	<meta name="twitter:image" content="http://ncase.me/fireflies/social/thumbnail.png">
+	<meta name="twitter:creator" content="@_Aryabhatiya">
+	<meta name="twitter:image" content="social/thumbnail.png">
 
 	<!-- TRANSLATE: 'og:title' and 'og:description' -->
-	<meta property="og:title" content="Fireflies">
+	<meta property="og:title" content="Bees">
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="http://ncase.me/fireflies/">
+	<meta property="og:url" content="">
 	<meta property="og:image" content="http://ncase.me/fireflies/social/thumbnail.png">
 	<meta property="og:description" content="a small simulation of small fireflies">
 
