--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 	<!-- TRANSLATE: 'og:title' and 'og:description' -->
 	<meta property="og:title" content="Bees">
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="">
-	<meta property="og:image" content="http://ncase.me/fireflies/social/thumbnail.png">
+	<meta property="og:url" content="https://biology.aryabhatiya.ml/">
+	<meta property="og:image" content="social/thumbnail.png">
 	<meta property="og:description" content="a small simulation of small fireflies">
 
 	<!-- Styles -->
@@ -43,7 +43,7 @@
 
 <!-- The WORDS! -->
 <div id="words">
-<h1>“Fireflies”</h1>
+<h1>“Bees”</h1>
 
 <p>
 Like Christmas lights gently floating in midair,
