--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta content="utf-8" http-equiv="encoding">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=640">
-	<link rel="icon" type="image/png" href="https://mathematics.aryabhatiya.ml/arya-ico.png">
+	<link rel="icon" type="image/png" href="http://mathematics.aryabhatiya.ml/arya-ico.png">
 
 	<!-- TRANSLATE: 'name' and 'description' -->
 	<meta itemprop="name" content="Bees">
