--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<!-- TRANSLATE: 'og:title' and 'og:description' -->
 	<meta property="og:title" content="Bees">
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://biology.aryabhatiya.ml/">
+	<meta property="og:url" content="http://biology.aryabhatiya.ml/">
 	<meta property="og:image" content="social/thumbnail.png">
 	<meta property="og:description" content="a small simulation of small fireflies">
 
