--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta content="utf-8" http-equiv="encoding">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=640">
-	<link rel="icon" type="image/png" href="http://mathematics.aryabhatiya.ml/arya-ico.png">
+	<link rel="icon" type="image/png" href="https://mathematics.aryabhatiya.ml/arya-ico.png">
 
 	<!-- TRANSLATE: 'name' and 'description' -->
 	<meta itemprop="name" content="Bees">
@@ -27,7 +27,7 @@
 	<!-- TRANSLATE: 'og:title' and 'og:description' -->
 	<meta property="og:title" content="Bees">
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="http://biology.aryabhatiya.ml/">
+	<meta property="og:url" content="https://biology.aryabhatiya.ml/">
 	<meta property="og:image" content="social/thumbnail.png">
 	<meta property="og:description" content="a small simulation of small fireflies">
 
