Update and rename index.html to forest.html

--- a/forest.html
+++ b/forest.html
@@ -3,29 +3,29 @@
 <head>
 	
 	<!-- Meta -->
-	<title>A Simulation In Emoji</title>
+	<title>Forest Simulation | Aryabhatiya</title>
 	<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 	<meta content="utf-8" http-equiv="encoding">
-	<link rel="icon" type="image/png" href="favicon.png">
+	<link rel="icon" type="image/png" href="https://mathematics.aryabhatiya.ml/arya-ico.png">
 
 	<!-- Schema.org markup for Google+ -->
-	<meta itemprop="name" content="A Simulation In Emoji">
+	<meta itemprop="name" content="Forest Simulation | Aryabhatiya">
 	<meta itemprop="description" content="Simulate the world. In emoji.">
-	<meta itemprop="image" content="http://ncase.me/emoji-prototype/social/thumbnail.png">
+	<meta itemprop="image" content="social/thumbnail.png">
 
 	<!-- Twitter Card data -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:site" content="@ncasenmare">
-	<meta name="twitter:title" content="A Simulation In Emoji">
+	<meta name="twitter:site" content="@_Aryabhatiya">
+	<meta name="twitter:title" content="Forest Simulation | Aryabhatiya">
 	<meta name="twitter:description" content="Simulate the world. In emoji.">
-	<meta name="twitter:creator" content="@ncasenmare">
-	<meta name="twitter:image" content="http://ncase.me/emoji-prototype/social/thumbnail.png">
+	<meta name="twitter:creator" content="@_Aryabhatiya">
+	<meta name="twitter:image" content="social/thumbnail.png">
 
 	<!-- Open Graph data -->
-	<meta property="og:title" content="A Simulation In Emoji">
+	<meta property="og:title" content="Forest Simulation | Aryabhatiya">
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="http://ncase.me/emoji-prototype">
-	<meta property="og:image" content="http://ncase.me/emoji-prototype/social/thumbnail.png">
+	<meta property="og:url" content="http://biology.aryabhatiya.ml/forest">
+	<meta property="og:image" content="social/thumbnail.png">
 	<meta property="og:description" content="Simulate the world. In emoji.">
 
 	<!-- Styles -->
