--- a/forest.html
+++ b/forest.html
@@ -11,7 +11,7 @@
 	<!-- Schema.org markup for Google+ -->
 	<meta itemprop="name" content="Forest Simulation | Aryabhatiya">
 	<meta itemprop="description" content="Simulate the world. In emoji.">
-	<meta itemprop="image" content="social/thumbnail.png">
+	<meta itemprop="image" content="social1/thumbnail.png">
 
 	<!-- Twitter Card data -->
 	<meta name="twitter:card" content="summary_large_image">
@@ -19,13 +19,13 @@
 	<meta name="twitter:title" content="Forest Simulation | Aryabhatiya">
 	<meta name="twitter:description" content="Simulate the world. In emoji.">
 	<meta name="twitter:creator" content="@_Aryabhatiya">
-	<meta name="twitter:image" content="social/thumbnail.png">
+	<meta name="twitter:image" content="social1/thumbnail.png">
 
 	<!-- Open Graph data -->
 	<meta property="og:title" content="Forest Simulation | Aryabhatiya">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="http://biology.aryabhatiya.ml/forest">
-	<meta property="og:image" content="social/thumbnail.png">
+	<meta property="og:image" content="social1/thumbnail.png">
 	<meta property="og:description" content="Simulate the world. In emoji.">
 
 	<!-- Styles -->
